# cmake-swig-101

./: CMakeLists.txt  LICENSE.md  README.md
cpp/: mylib.cmake  mylib.cpp  mylib.h  mylib.i
lua/: CMakeLists.txt  lua-binding-test.cpp
